[package]

name = "us3"
version = "0.0.1"
description = "Qiniu Resource (Cloud) Storage SDK for Rust."
readme = "README.md"
documentation = "http://developer.qiniu.com"
repository = "https://github.com/longbai/rust-sdk"
license = "MIT"
keywords = ["qiniu", "storage", "sdk", "cloud"]
edition = "2018"
authors = ["slongbai@gmail.com"]

[dependencies]
reqwest = { version = "0.10", default-features=false ,features = ["native-tls-vendored","json", "blocking"] }
tokio = { version = "0.2", features = ["full"] }
http = "0.2"
hmac = "0.7.1"
crypto-mac = "0.7.0"
sha-1 = "0.8.1"
url = "2.1.0"
base64 = "0.10.1"
rand = "0.7"
positioned-io = "0.2"
buf_redux = { version = "0.8", default-features = false }
safemem = { version = "0.3" }
httparse = { version = "1.2"}
twoway = { version = "0.1" }
quick-error = { version = "1.2" }
hyper = "*"
mime = "0.3.14"
mime_guess = "2.0.1"
log = "0.4.7"
toml = "0.5.0"
serde = { version = "1.0", features = ["derive"] }
once_cell = "1.4.1"
hex = "0.4.2"
bytes = "0.5.6"
serde_json = "1.0"
dashmap = { version = "4.0.2", features = ["serde"] }
directories = "3.0.1"
